This file contain the log of changes for the main development branch (trunk).
More detailed information for incremental change can be found in the
history management of subversion.

2013-06-14 releases/3.11.1
        - the setup for the v8-ifort MSVS project changed to use dynamic runtime
          DLLs instead of static linking, which caused crashes in debug mode
          (by M. Roelofs) [r2301]
        - fixed memory leaks in Java Interface (by javier) [#200, r2312]
        - updates and fixes to MA77 and MA87 interfaces, adding support of
          HSL 2013 codes (by J. Hogg);
          HSL 2012 still supported when compiled with Ipopt, but the linear solver
          loader to dynamically load a HSL library at runtime now assumes HSL 2013
        - added option ma97_solve_blas3 (by J. Hogg) [r2329]
        - changed default for option ma27_meminc_factor from 10.0 to 2.0 [r2330]
        - fixed bug in ipopt_auxdata of MATLAB Interface related to iterfunc [r2325]

2013-05-07 releases/3.11.0
        - update and extension of Ipopt documentation
        - updated build of doxygen documentation to comply with other COIN-OR projects
        - localized global variables in TaggedObject and RegisteredOption,
          so that Ipopt should now be threadsafe as long as Ipopt objects
          (esp. SmartPtr's) are not shared between threads and a threadsafe
          linear solver is used (e.g., MA27) [#167]
        - no more need for whitespace character at end of options file
        - added options print_frequency_iter and print_frequency_time to regulate
          which iteration summary lines should be printed [#161]
        - function evaluation timings are now available in OrigIpoptNLP [#86]
        - some fixes to uncommon issues with the Ipopt SmartPtr [#162]

        - new build system for Harwell codes (ThirdParty/HSL), which requires
          the coin-hsl archives from http://www.hsl.rl.ac.uk/ipopt/;